--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "hammerjs": "^2.0.8",
         "jquery": "^3.3.1",
         "mydatepicker": "^2.6.6",
+        "ng2-ckeditor": "^1.2.2",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.4.7",
         "ngx-bootstrap": "^3.0.1",
