--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
         "@ng-select/ng-select": "^2.12.1",
         "@ngx-translate/core": "^10.0.2",
         "@ngx-translate/http-loader": "^3.0.1",
+        "@progress/kendo-angular-dateinputs": "^3.5.2",
+        "@progress/kendo-angular-intl": "^1.6.1",
+        "@progress/kendo-angular-l10n": "^1.3.0",
         "@types/jquery": "^3.3.3",
         "@types/underscore": "^1.8.8",
-        "angular-bootstrap-md": "^6.2.1",
         "amazing-time-picker": "^1.8.0",
+        "angular-bootstrap-md": "^6.2.1",
         "angular-captcha": "^3.3.1",
         "angular-font-awesome": "^3.1.2",
         "angular2-image-zoom": "^1.2.1",
@@ -42,10 +45,12 @@
         "jquery": "^3.3.1",
         "mydatepicker": "^2.6.6",
         "ng2-ckeditor": "^1.2.2",
+        "ng2-intl": "^2.0.0-rc.3",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.4.7",
         "ngx-bootstrap": "^3.0.1",
         "ngx-device-detector": "^1.3.0",
+        "ngx-pagination": "^3.2.1",
         "popper.js": "^1.12.9",
         "rxjs": "^6.0.0",
         "rxjs-compat": "^6.2.2",
