--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "ng2-intl": "^2.0.0-rc.3",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.4.7",
+        "ng4-loading-spinner": "^1.2.3",
         "ngx-bootstrap": "^3.0.1",
         "ngx-device-detector": "^1.3.0",
         "ngx-pagination": "^3.2.1",
