--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "private": true,
     "dependencies": {
+        "@agm/core": "^1.0.0-beta.5",
         "@angular/animations": "^6.1.10",
         "@angular/cdk": "^6.4.7",
         "@angular/common": "^6.0.3",
@@ -48,6 +49,7 @@
         "ng2-intl": "^2.0.0-rc.3",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.4.7",
+        "ng4-geoautocomplete": "^0.1.0",
         "ng4-loading-spinner": "^1.2.3",
         "ngx-bootstrap": "^3.0.1",
         "ngx-device-detector": "^1.3.0",
@@ -61,15 +63,16 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^6.0.3",
         "@angular-devkit/build-angular": "~0.6.5",
-        "typescript": "~2.7.2",
         "@angular/cli": "~6.0.5",
+        "@angular/compiler-cli": "^6.0.3",
         "@angular/language-service": "^6.0.3",
+        "@types/googlemaps": "^3.30.16",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.2.1",
+        "install-peers": "^1.0.2",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~1.7.1",
@@ -80,6 +83,6 @@
         "protractor": "~5.3.0",
         "ts-node": "~5.0.1",
         "tslint": "~5.9.1",
-        "install-peers": "^1.0.2"
+        "typescript": "~2.7.2"
     }
 }
