--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/jquery": "^3.3.3",
         "@types/underscore": "^1.8.8",
         "amazing-time-picker": "^1.8.0",
+        "angular-2-dropdown-multiselect": "^1.8.1",
         "angular-bootstrap-md": "^6.2.1",
         "angular-captcha": "^3.3.1",
         "angular-font-awesome": "^3.1.2",
