--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "angular-font-awesome": "^3.1.2",
         "angular2-image-zoom": "^1.2.1",
         "angular4-datepicker": "^1.0.1",
+        "safe-pipe": "^0.3.0",
         "bootstrap": "^4.0.0",
         "core-js": "^2.5.4",
         "file-saver": "^2.0.0-rc.3",
